--- a/openApiDocs/beta/DeviceManagement.Actions.yml
+++ b/openApiDocs/beta/DeviceManagement.Actions.yml
@@ -13550,7 +13550,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementComplianceActionItem'
               description: The list of scheduled action configurations for this compliance policy. This collection can contain a maximum of 100 elements.
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: Scheduled Action for Rule
@@ -13611,13 +13611,13 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementConfigurationPolicyAssignment'
               description: Policy assignments
-              readOnly: true
+              x-ms-navigationProperty: true
             settings:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementConfigurationSetting'
               description: Policy settings
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: Device Management Configuration Policy
@@ -13748,7 +13748,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceComplianceActionItem'
               description: The list of scheduled action configurations for this compliance policy. Compliance policy must have one and only one block scheduled action.
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: Scheduled Action for Rule
@@ -14067,7 +14067,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.enrollmentConfigurationAssignment'
               description: The list of group assignments for the device configuration profile
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: The Base Class of Device Enrollment Configuration
@@ -14143,7 +14143,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.groupPolicyPresentationValue'
               description: The associated group policy presentation values with the definition value.
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: The definition value entity stores the value for a single group policy definition.
@@ -14345,25 +14345,25 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementIntentAssignment'
               description: Collection of assignments
-              readOnly: true
+              x-ms-navigationProperty: true
             categories:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementIntentSettingCategory'
               description: Collection of setting categories within the intent
-              readOnly: true
+              x-ms-navigationProperty: true
             deviceSettingStateSummaries:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementIntentDeviceSettingStateSummary'
               description: Collection of settings and their states and counts of devices that belong to corresponding state for all settings within the intent
-              readOnly: true
+              x-ms-navigationProperty: true
             deviceStates:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementIntentDeviceState'
               description: Collection of states of all devices that the intent is applied to
-              readOnly: true
+              x-ms-navigationProperty: true
             deviceStateSummary:
               $ref: '#/components/schemas/microsoft.graph.deviceManagementIntentDeviceStateSummary'
             settings:
@@ -14371,13 +14371,13 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementSettingInstance'
               description: Collection of all settings to be applied
-              readOnly: true
+              x-ms-navigationProperty: true
             userStates:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementIntentUserState'
               description: Collection of states of all users that the intent is applied to
-              readOnly: true
+              x-ms-navigationProperty: true
             userStateSummary:
               $ref: '#/components/schemas/microsoft.graph.deviceManagementIntentUserStateSummary'
           additionalProperties:
@@ -14656,7 +14656,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementResourceAccessProfileAssignment'
               description: The list of assignments for the device configuration profile.
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: Base Profile Type for Resource Access
@@ -14710,7 +14710,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementConfigurationPolicy'
               description: configuration policies referencing the current reusable setting. This property is read-only.
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: Graph model for a reusable setting
@@ -14748,7 +14748,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.roleScopeTagAutoAssignment'
               description: The list of assignments for this Role Scope Tag.
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: Role Scope Tag
@@ -15253,7 +15253,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementConfigurationSettingDefinition'
               description: List of related Setting Definitions. This property is read-only.
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: Setting instance within policy
@@ -15479,19 +15479,19 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceConfigurationAssignment'
               description: The list of assignments for the device configuration profile.
-              readOnly: true
+              x-ms-navigationProperty: true
             deviceSettingStateSummaries:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.settingStateDeviceSummary'
               description: Device Configuration Setting State Device Summary
-              readOnly: true
+              x-ms-navigationProperty: true
             deviceStatuses:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceConfigurationDeviceStatus'
               description: Device configuration installation status by device.
-              readOnly: true
+              x-ms-navigationProperty: true
             deviceStatusOverview:
               $ref: '#/components/schemas/microsoft.graph.deviceConfigurationDeviceOverview'
             groupAssignments:
@@ -15499,13 +15499,13 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceConfigurationGroupAssignment'
               description: The list of group assignments for the device configuration profile.
-              readOnly: true
+              x-ms-navigationProperty: true
             userStatuses:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceConfigurationUserStatus'
               description: Device configuration installation status by user.
-              readOnly: true
+              x-ms-navigationProperty: true
             userStatusOverview:
               $ref: '#/components/schemas/microsoft.graph.deviceConfigurationUserOverview'
           additionalProperties:
@@ -15778,7 +15778,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.groupPolicyPresentation'
               description: The group policy presentations associated with the definition.
-              readOnly: true
+              x-ms-navigationProperty: true
             previousVersionDefinition:
               $ref: '#/components/schemas/microsoft.graph.groupPolicyDefinition'
           additionalProperties:
@@ -15860,7 +15860,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementSettingInstance'
               description: The settings this category contains
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: Entity representing an intent setting category
@@ -17493,7 +17493,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.groupPolicyCategory'
               description: The children categories
-              readOnly: true
+              x-ms-navigationProperty: true
             definitionFile:
               $ref: '#/components/schemas/microsoft.graph.groupPolicyDefinitionFile'
             definitions:
@@ -17501,7 +17501,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.groupPolicyDefinition'
               description: The immediate GroupPolicyDefinition children of the category
-              readOnly: true
+              x-ms-navigationProperty: true
             parent:
               $ref: '#/components/schemas/microsoft.graph.groupPolicyCategory'
           additionalProperties:
@@ -17555,7 +17555,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.groupPolicyDefinition'
               description: The group policy definitions associated with the file.
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: The entity represents an ADMX (Administrative Template) XML file. The ADMX file contains a collection of group policy definitions and their locations by category path. The group policy definition file also contains the languages supported as determined by the language dependent ADML (Administrative Template) language files.
@@ -17626,7 +17626,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementSettingDefinition'
               description: The setting definitions this category contains
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: Entity representing a setting category
