--- a/openApiDocs/beta/Devices.ServiceAnnouncement.yml
+++ b/openApiDocs/beta/Devices.ServiceAnnouncement.yml
@@ -3891,13 +3891,13 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.browserSharedCookie'
               description: A collection of shared cookies defined for the site list.
-              readOnly: true
+              x-ms-navigationProperty: true
             sites:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.browserSite'
               description: A collection of sites defined for the site list.
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: A singleton entity which is used to specify IE mode site list metadata
@@ -3912,19 +3912,19 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.serviceHealth'
               description: 'A collection of service health information for tenant. This property is a contained navigation property, it is nullable and readonly.'
-              readOnly: true
+              x-ms-navigationProperty: true
             issues:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.serviceHealthIssue'
               description: 'A collection of service issues for tenant. This property is a contained navigation property, it is nullable and readonly.'
-              readOnly: true
+              x-ms-navigationProperty: true
             messages:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.serviceUpdateMessage'
               description: 'A collection of service messages for tenant. This property is a contained navigation property, it is nullable and readonly.'
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
     microsoft.graph.serviceHealth:
@@ -3943,7 +3943,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.serviceHealthIssue'
               description: 'A collection of issues that happened on the service, with detailed information for each issue.'
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
     microsoft.graph.serviceHealthIssue:
@@ -4031,7 +4031,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.serviceAnnouncementAttachment'
               description: A collection of serviceAnnouncementAttachments.
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
     microsoft.graph.serviceAnnouncementAttachment:
