--- a/openApiDocs/beta/Bookings.yml
+++ b/openApiDocs/beta/Bookings.yml
@@ -3904,37 +3904,37 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.bookingAppointment'
               description: All the appointments of this business. Read-only. Nullable.
-              readOnly: true
+              x-ms-navigationProperty: true
             calendarView:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.bookingAppointment'
               description: The set of appointments of this business in a specified date range. Read-only. Nullable.
-              readOnly: true
+              x-ms-navigationProperty: true
             customers:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.bookingCustomer'
               description: All the customers of this business. Read-only. Nullable.
-              readOnly: true
+              x-ms-navigationProperty: true
             customQuestions:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.bookingCustomQuestion'
               description: All the custom questions of this business. Read-only. Nullable.
-              readOnly: true
+              x-ms-navigationProperty: true
             services:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.bookingService'
               description: All the services offered by this business. Read-only. Nullable.
-              readOnly: true
+              x-ms-navigationProperty: true
             staffMembers:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.bookingStaffMember'
               description: All the staff members that provide services in this business. Read-only. Nullable.
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: Represents a Microsot Bookings Business.
@@ -4298,7 +4298,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.businessScenario'
-          readOnly: true
+          x-ms-navigationProperty: true
       additionalProperties:
         type: object
     microsoft.graph.businessScenario:
@@ -4354,7 +4354,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.businessScenarioTask'
               description: The Planner tasks for the scenario.
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
     microsoft.graph.businessScenarioTaskTargetBase:
@@ -4411,7 +4411,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.plannerPlanConfigurationLocalization'
               description: Localized names for the plan configuration.
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
     microsoft.graph.plannerPlanConfigurationLocalization:
