--- a/openApiDocs/beta/Reports.yml
+++ b/openApiDocs/beta/Reports.yml
@@ -10255,22 +10255,22 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.directoryAudit'
-          readOnly: true
+          x-ms-navigationProperty: true
         directoryProvisioning:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.provisioningObjectSummary'
-          readOnly: true
+          x-ms-navigationProperty: true
         provisioning:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.provisioningObjectSummary'
-          readOnly: true
+          x-ms-navigationProperty: true
         signIns:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.signIn'
-          readOnly: true
+          x-ms-navigationProperty: true
       additionalProperties:
         type: object
     microsoft.graph.directoryAudit:
@@ -10648,13 +10648,13 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementCachedReportConfiguration'
               description: Entity representing the configuration of a cached report
-              readOnly: true
+              x-ms-navigationProperty: true
             exportJobs:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementExportJob'
               description: Entity representing a job to export a report
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
           description: Singleton entity that acts as a container for all reports functionality.
@@ -10760,7 +10760,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.applicationSignInDetailedSummary'
               description: Represents a detailed summary of an application sign-in.
-              readOnly: true
+              x-ms-navigationProperty: true
             authenticationMethods:
               $ref: '#/components/schemas/microsoft.graph.authenticationMethodsRoot'
             credentialUserRegistrationDetails:
@@ -10768,58 +10768,58 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.credentialUserRegistrationDetails'
               description: Details of the usage of self-service password reset and multi-factor authentication (MFA) for all registered users.
-              readOnly: true
+              x-ms-navigationProperty: true
             userCredentialUsageDetails:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.userCredentialUsageDetails'
               description: Represents the self-service password reset (SSPR) usage for a given tenant.
-              readOnly: true
+              x-ms-navigationProperty: true
             dailyPrintUsage:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.printUsage'
-              readOnly: true
+              x-ms-navigationProperty: true
             dailyPrintUsageByPrinter:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.printUsageByPrinter'
-              readOnly: true
+              x-ms-navigationProperty: true
             dailyPrintUsageByUser:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.printUsageByUser'
-              readOnly: true
+              x-ms-navigationProperty: true
             dailyPrintUsageSummariesByPrinter:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.printUsageByPrinter'
-              readOnly: true
+              x-ms-navigationProperty: true
             dailyPrintUsageSummariesByUser:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.printUsageByUser'
-              readOnly: true
+              x-ms-navigationProperty: true
             monthlyPrintUsageByPrinter:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.printUsageByPrinter'
-              readOnly: true
+              x-ms-navigationProperty: true
             monthlyPrintUsageByUser:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.printUsageByUser'
-              readOnly: true
+              x-ms-navigationProperty: true
             monthlyPrintUsageSummariesByPrinter:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.printUsageByPrinter'
-              readOnly: true
+              x-ms-navigationProperty: true
             monthlyPrintUsageSummariesByUser:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.printUsageByUser'
-              readOnly: true
+              x-ms-navigationProperty: true
             security:
               $ref: '#/components/schemas/microsoft.graph.securityReportsRoot'
           additionalProperties:
@@ -10862,7 +10862,7 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.userRegistrationDetails'
               description: 'Represents the state of a user''s authentication methods, including which methods are registered and which features the user is registered and capable of (such as multi-factor authentication, self-service password reset, and passwordless authentication).'
-              readOnly: true
+              x-ms-navigationProperty: true
           additionalProperties:
             type: object
     microsoft.graph.userRegistrationFeatureSummary:
